[package]
name = "tunnelcast"
version = "0.1.0"
authors = ["Alex Kehayias <alex.kehayias@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
lazy_static = "1.4.0"
tui = "0.10.0"
termion = "1.5.5"
backtrace = "0.3"